# Gwangsan-Ai

./: .dockerignore  Dockerfile  NSFW_model.py  compose.yaml  filter_app.py  main.py  nsfw_app.py  profanity_filter.py  pyproject.toml
.github/workflows/: cd.yml
